[package]
name = "linear_search"
version = "0.1.0"
authors = ["Harshaan Babra <harshaan.babra@gmail.com>"]
edition = "2021"

[[bin]]
name = "SimpleBinarySearch"
path = "/Users/harshaanbabra/Desktop/Code/Python/leetcode_soltuions/leet_code_solution_in_rust/simple_linear_search/linear_search.rs"


[dependencies]